WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115574
Crash using new WKBundlePageSetHeaderBanner() API to set a banner to null
https://bugs.webkit.org/show_bug.cgi?id=115574
Summary
Crash using new WKBundlePageSetHeaderBanner() API to set a banner to null
Beth Dakin
Reported
2013-05-03 13:55:39 PDT
The new WKBundlePageSetHeaderBanner does not correctly handle the null banner case. Patch forthcoming. <
rdar://problem/13798364
>
Attachments
Patch
(1.98 KB, patch)
2013-05-03 13:57 PDT
,
Beth Dakin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2013-05-03 13:57:51 PDT
Created
attachment 200466
[details]
Patch
Benjamin Poulain
Comment 2
2013-05-03 15:58:15 PDT
Comment on
attachment 200466
[details]
Patch No API tests?
Beth Dakin
Comment 3
2013-05-04 11:44:09 PDT
(In reply to
comment #2
)
> (From update of
attachment 200466
[details]
) > No API tests?
You're right; Sam and I should add API tests for this feature. Up until when Sam added the hit testing stuff to the API (which led to this crash), most of the interesting work was happening down in WebCore and we have been testing it with Internals.setHeaderHeight and Internals.setFooterHeight.
Beth Dakin
Comment 4
2013-05-04 11:46:05 PDT
http://trac.webkit.org/changeset/149561
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug