https://bugs.webkit.org/show_bug.cgi?id=115574 Crash using new WKBundlePageSetHeaderBanner() API to set a banner to null

Reviewed by Darin Adler.

Don't call addToPage() on a null banner.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setHeaderPageBanner):
(WebKit::WebPage::setFooterPageBanner):



Canonical link: https://commits.webkit.org/134026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149561 268f45cc-cd09-0410-ab3c-d52691b4dbfc